<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.pdm.klebson.lostboard.MainHome"
    tools:showIn="@layout/activity_main_home">


    <Button
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:text="@string/action_perdi_minha_placa"
        android:id="@+id/button_PerdiMinhaPlaca"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:onClick="onClick" />

    <Button
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:text="@string/action_encontrei_uma_placa"
        android:id="@+id/button_EncontreiUmaPlaca"
        android:onClick="clickEncontreiUmaPlaca"
        android:layout_below="@+id/button_PerdiMinhaPlaca"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:text="@string/action_lista_de_placa"
        android:id="@+id/button_ListaDePlaca"
        android:layout_below="@+id/button_EncontreiUmaPlaca"
        android:layout_alignRight="@+id/button_EncontreiUmaPlaca"
        android:layout_alignEnd="@+id/button_EncontreiUmaPlaca"
        android:layout_alignLeft="@+id/button_EncontreiUmaPlaca"
        android:layout_alignStart="@+id/button_EncontreiUmaPlaca"
        android:onClick="clickListaDePlaca" />

    <Button
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:text="@string/action_informativo"
        android:id="@+id/button_Informativo"
        android:layout_below="@+id/button_ListaDePlaca"
        android:layout_alignRight="@+id/button_ListaDePlaca"
        android:layout_alignEnd="@+id/button_ListaDePlaca"
        android:layout_alignLeft="@+id/button_ListaDePlaca"
        android:layout_alignStart="@+id/button_ListaDePlaca"
        android:onClick="clickSoma"/>
</RelativeLayout>
