<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.pdm.klebson.lostboard.Activity_encontrei_uma_placa"
    tools:showIn="@layout/activity_encontrei_uma_placa">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/title_activity_cadastro"
        android:id="@+id/textView_cadastroEncontreiUmaPlaca"
        android:textSize="21dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/title_activity_encontrei_uma_placa"
        android:id="@+id/textView_encontreiUmaPlaca"
        android:textSize="21dp"
        android:layout_below="@+id/textView_cadastroEncontreiUmaPlaca"
        android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_instrução_encontrei_uma_placa"
        android:id="@+id/textView2"
        android:textSize="12dp"
        android:layout_below="@+id/textView_encontreiUmaPlaca"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText_nome"
        android:hint="Nome"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editText_telefoneAcheiUmaPlaca"
        android:layout_below="@+id/editText_nome"
        android:layout_centerHorizontal="true"
        android:hint="Telefone" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_PlacaEncontrada"
        android:layout_below="@+id/editText_telefoneAcheiUmaPlaca"
        android:layout_alignRight="@+id/editText_telefoneAcheiUmaPlaca"
        android:layout_alignEnd="@+id/editText_telefoneAcheiUmaPlaca"
        android:layout_alignLeft="@+id/editText_telefoneAcheiUmaPlaca"
        android:layout_alignStart="@+id/editText_telefoneAcheiUmaPlaca"
        android:hint="Placa Encontrada" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/editText_LocalOndeEncontrou"
        android:layout_below="@+id/editText_PlacaEncontrada"
        android:layout_centerHorizontal="true"
        android:hint="Local Onde Encontrou" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_Observacao"
        android:layout_below="@+id/editText_LocalOndeEncontrou"
        android:layout_alignRight="@+id/editText_LocalOndeEncontrou"
        android:layout_alignEnd="@+id/editText_LocalOndeEncontrou"
        android:layout_alignLeft="@+id/editText_LocalOndeEncontrou"
        android:layout_alignStart="@+id/editText_LocalOndeEncontrou"
        android:hint="Observação"
        android:height="80dp" />

    <Button
        android:layout_width="135dp"
        android:layout_height="50dp"
        android:text="@string/action_cadastrar"
        android:id="@+id/button_cadastrarEncontreiUmaPlaca"
        android:layout_alignTop="@+id/button_cancelarEncontreiUmaPlaca"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="135dp"
        android:layout_height="50dp"
        android:text="@string/action_cancelar"
        android:id="@+id/button_cancelarEncontreiUmaPlaca"
        android:onClick="onClick"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:layout_marginBottom="19dp" />


</RelativeLayout>
